Tue May 25 07:23:56 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/andmaybepostlist.cc,matcher/andmaybepostlist.h,
	  matcher/orpostlist.cc: Fix a bug causing documents to be skipped
	  when OR decayed to AND_MAYBE, if the new RHS was behind the LHS
	  at the time of the decay.  Fixes #476.
	* tests/api_backend.cc: Add test case ordecay2 as a regression test
	  of this.  Also, remove some debug output in ordecay1, to speed it
	  up quite a bit.

Tue May 25 07:00:12 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/orpostlist.cc,tests/api_backend.cc: Fix a bug in the
	  decay from OR to AND: if the decay happened when the two
	  sub-postlists were on different docids, but the higher of those
	  docids actually occurred in both postlists, the higher docid
	  would be incorrectly skipped.  Add regression test ordecay1 to
	  test this.

Sun May 23 09:56:13 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/orpostlist.cc: Correct some debugging lines.

Sun May 23 09:40:58 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/orpostlist.cc,matcher/orpostlist.h: Add
	  OrPostList::check() method, which calls check() on the
	  sub-postlists, rather than falling back to skip_to().  This is
	  particularly helpful when a sub-postlist is one for which
	  skip_to() can be significantly more expensive than check(), such
	  as a ValueRangePostList.  I've observed a speedup of 10 times for
	  such a subquery with this change.

Sun May 23 07:29:15 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/xorpostlist.cc,matcher/xorpostlist.h: Pass a minweight
	  value of 0 to children of XOR postlists, because we need to know
	  about all matching documents from the children even if they have
	  a low weight.
	* tests/api_backend.cc: Regression test for this: xordecay1.

Sun May 23 07:27:19 GMT 2010  Olly Betts <olly@survex.com>
